--- a/style/main.css
+++ b/style/main.css
@@ -22,6 +22,7 @@ nav h1 {
   margin: 0 10px;
   font-size: 36px;
 }
+/* nav link list styling */
 nav ul {
   list-style: none;
   text-align: right;
@@ -48,6 +49,7 @@ nav ul li a:hover {
 }
 
 /* nav bar animation on hover */
+/* underneath line (stroke) and color fill (fill) */
 nav.stroke ul li a,
 nav.fill ul li a {
   position: relative;
@@ -91,7 +93,7 @@ nav.fill ul li a:hover:after {
   opacity: 1;
 }
 
-/* overlap image + what-is-urban-farming section - about.html */
+/* overlap image + what-is-urban-farming? section - about.html */
 section {
   width: 100%;
   display: flex;
@@ -108,14 +110,14 @@ section {
   justify-content: center;
 }
 
-/* left side image styling */
+/* left side - image styling */
 .left {
   width: 50%;
   height: 600px;
   background: url("../img/water-garden.jpg") no-repeat center / cover;
   border-radius: 8px;
 }
-/* right side text styling */
+/* right side - div container & text styling */
 .right {
   width: 50%;
   min-height: 500px;
@@ -138,7 +140,7 @@ section {
   line-height: 25px;
 }
 
-/* mission statement section - about.html */
+/* mission statement section - green background - about.html */
 .mission-section {
   font-size: 14px;
   background: #3e4d41;
@@ -148,7 +150,7 @@ section {
   color: #fff;
 }
 
-/* goal section - about.html */
+/* goal section - gray background - about.html */
 .goal-section {
   font-size: 14px;
   background: #f5f5f5;
@@ -158,7 +160,7 @@ section {
   color: black;
 }
 
-/* garden section - getinvolved.html */
+/* community garden div - getinvolved.html */
 .garden-section {
   font-size: 14px;
   background: #f5f5f5;
@@ -291,7 +293,7 @@ input[type="submit"]:hover {
   padding: 20px;
 }
 
-/* resources.html */
+/* info link button styling - resources.html */
 .resource:link,
 .resource:visited {
   background-color: white;
@@ -307,12 +309,13 @@ input[type="submit"]:hover {
   background-color: green;
   color: white;
 }
+
 .r-heading {
   text-align: center;
   padding-bottom: 30px;
   font-size: 40px;
 }
-
+/* resource div styling */
 .r-info {
   float: left;
   width: 50%;
@@ -324,7 +327,7 @@ input[type="submit"]:hover {
   display: table;
   clear: both;
 }
-
+/* resources info paragraph text */
 .r-info p {
   font-size: 18px;
   font-family: "Open Sans", sans-serif;
@@ -334,6 +337,7 @@ input[type="submit"]:hover {
   margin: 5px auto;
 }
 
+/* horizontal line break styling - resources.html */
 hr {
   width: 70%;
   height: 2px;
@@ -429,6 +433,7 @@ footer p {
   font-size: 16px;
 }
 
+/* social icons styling*/
 .footer-social {
   padding-right: 30px;
 }
@@ -443,7 +448,7 @@ footer p {
   list-style: none;
   margin-left: 5px;
 }
-
+/* social icon styling - can be circle or more square in appearance */
 .fa {
   padding: 10px;
   font-size: 30px;
@@ -452,7 +457,7 @@ footer p {
   margin: 5px 2px;
   border-radius: 20%;
 }
-
+/* social icon hover */
 .fa:hover {
   opacity: 0.7;
 }
@@ -512,7 +517,7 @@ footer p {
   }
 }
 
-/* Keyframes for hover animation on nav bar links */
+/* Keyframes for hover [stroke/fill] animation on nav bar links */
 /* chrome & safari */
 @-webkit-keyframes fill {
   0% {
@@ -594,7 +599,7 @@ footer p {
   }
 }
 
-/* Fading animation for gallery */
+/* Fading animation in between pictures for gallery */
 .fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
