--- a/style/main.css
+++ b/style/main.css
@@ -10,7 +10,11 @@ body {
   height: 100%;
   margin: 0;
 }
-/* navigation bar */
+
+/** navigation bar **/
+/**               **/
+/**              **/
+
 nav {
   width: 100%;
   margin: 0 auto;
@@ -93,7 +97,11 @@ nav.fill ul li a:hover:after {
   opacity: 1;
 }
 
-/* overlap image + what-is-urban-farming? section - about.html */
+/** ABOUT.HTML PAGE **/
+/**                 **/
+/**                 **/
+
+/* overlap image + what-is-urban-farming? section */
 section {
   width: 100%;
   display: flex;
@@ -140,7 +148,7 @@ section {
   line-height: 25px;
 }
 
-/* mission statement section - green background - about.html */
+/* mission statement section - green background  */
 .mission-section {
   font-size: 14px;
   background: #3e4d41;
@@ -150,7 +158,7 @@ section {
   color: #fff;
 }
 
-/* goal section - gray background - about.html */
+/* goal section - gray background */
 .goal-section {
   font-size: 14px;
   background: #f5f5f5;
@@ -160,7 +168,11 @@ section {
   color: black;
 }
 
-/* community garden div - getinvolved.html */
+/** GETINVOLVED.HTML PAGE **/
+/**                      **/
+/**                     **/
+
+/* community garden div */
 .garden-section {
   font-size: 14px;
   background: #f5f5f5;
@@ -169,7 +181,7 @@ section {
   padding: 2% 10%;
   color: black;
 }
-/* 3 circles for sponser garden getinvolved.html */
+/* 3 circles for sponser garden  */
 .circle-section {
   padding: 48px 0;
   background: #3e4d41;
@@ -260,7 +272,7 @@ section {
   color: white;
 }
 
-/* contact form - getinvolved.html */
+/* contact form  */
 input[type="text"],
 select,
 textarea {
@@ -293,7 +305,11 @@ input[type="submit"]:hover {
   padding: 20px;
 }
 
-/* info link button styling - resources.html */
+/** RESOURCES.HTML PAGE **/
+/**                    **/
+/**                   **/
+
+/* info link button styling */
 .resource:link,
 .resource:visited {
   background-color: white;
@@ -337,7 +353,7 @@ input[type="submit"]:hover {
   margin: 5px auto;
 }
 
-/* horizontal line break styling - resources.html */
+/* horizontal line break styling */
 hr {
   width: 70%;
   height: 2px;
@@ -345,6 +361,10 @@ hr {
   color: #cccccc;
   border: 0 none;
 }
+
+/** GALLERY.HTML PAGE **/
+/**                  **/
+/**                 **/
 
 /* gallery slideshow */
 .mySlides {
@@ -416,7 +436,10 @@ img {
   background-color: #717171;
 }
 
-/* footer */
+/** FOOTER **/
+/**        **/
+/**        **/
+
 footer {
   position: relative;
   left: 0;
@@ -482,7 +505,10 @@ footer p {
   color: white;
 }
 
-/* media queries */
+/* MEDIA QUERIES */
+/*               */
+/*               */
+
 @media only screen and (max-width: 768px) {
   .container {
     flex-direction: column;
@@ -516,6 +542,10 @@ footer p {
     font-size: 11px;
   }
 }
+
+/**   KEYFRAMES   **/
+/**               **/
+/**               **/
 
 /* Keyframes for hover [stroke/fill] animation on nav bar links */
 /* chrome & safari */
