--- a/style/main.css
+++ b/style/main.css
@@ -150,6 +150,13 @@ section {
 }
 
 /* mission statement section - green background  */
+
+.mission-section-grid {
+	display: grid;
+	grid-template-columns: 50% 50%;
+	grid-template-rows: 1;
+}
+
 .mission-section {
   font-size: 16px;
   background: #3e4d41;
@@ -404,10 +411,36 @@ hr {
   background: #f5f5f5;
   align-items: center;
   justify-content: center;
-  padding: 5% 20%;
+  padding: 5% 5% 5% 5%;
   color: black;
 }
+
+.featuredImg {
+	display: grid;
+	grid-template-columns: 45% 45%;
+	grid-template-rows: 1;
+	padding: 10px 0px 100px;
+	grid-gap: 5% 10%;
+	text-align: left;
+}
+/* image gallery */
+
+.img-grid {
+	display: grid;
+	grid-template-columns: 25% 25% 25% 25%;		/*number of columns*/
+	grid-template-rows: repeat(3, 1fr); 		/*number of rows*/
+	padding: 10px;								/*space between the border of the grid and the page*/
+	grid-gap: 10px;								/*space between different grid components*/
+	
+}
+
+.gallery {					/*affects images in image gallery*/
+	padding: 10px;
+	cursor: pointer;
+}
+
 /* gallery slideshow */
+
 .mySlides {
   display: none;
 }
@@ -421,7 +454,6 @@ img {
   position: relative;
   margin: auto;
 }
-
 /* Next & previous buttons */
 .prev,
 .next {
@@ -493,18 +525,14 @@ footer {
 }
 
 footer h4 {
-  /*padding-left: 30px;
-  padding-bottom: 10px;*/
   font-weight: bold;
-  font-family: Arial, sans-serif;
+  /*font-family: Arial, sans-serif;*/
   text-align: left;
 }
 
 footer p {
-  /*padding-left: 30px;
-  padding-bottom: 10px;*/
   font-size: 16px;
-  font-family: Arial, sans-serif;
+  /*font-family: Arial, sans-serif;*/
 }
 
 footer ul {
@@ -513,7 +541,7 @@ footer ul {
   padding: 0;
 }
 
-.grid {
+.footer-grid {
 		display: grid;
 		grid-template-columns: auto 20% 20%;	/*number of columns*/
 		grid-template-rows: repeat(2, 1fr);			/*number of rows*/
@@ -524,7 +552,7 @@ footer ul {
 		color: #3e4d41;								/*text color*/
 }
 
-.grid-item{
+.footer-grid-item{
 	padding: 10px;									/*space between elements inside of the grid and the border of the grid*/
 }
 
