--- a/style/main.css
+++ b/style/main.css
@@ -153,7 +153,7 @@ section {
 
 .mission-section-grid {
 	display: grid;
-	grid-template-columns: 50% 50%;
+	grid-template-columns: 2(1fr);
 	grid-template-rows: 1;
 }
 
