--- a/style/landing.css
+++ b/style/landing.css
@@ -3,7 +3,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Montserrat";
+}
+
+@font-face {
+  font-family: GlacialIndifference;
+  src: url(GlacialIndifference-Bold.otf);
+  font-weight: bold;
 }
 /* video background styling */
 .showcase {
@@ -51,13 +56,14 @@
 }
 
 .text h2 {
+  font-family: GlacialIndifference;
   font-size: 5em;
   font-weight: 800;
   color: #fff;
   line-height: 1em;
-  text-transform: uppercase;
 }
 .text h3 {
+  font-family: GlacialIndifference;
   font-size: 4em;
   font-weight: 700;
   color: #fff;
