--- a/style/main.css
+++ b/style/main.css
@@ -5,6 +5,10 @@
   font-family: "Montserrat";
 }
 
+/* Raleway Font - Regular 400 */
+@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
+
+/* Glacial Indifference Font */
 @font-face {
   font-family: GlacialIndifference;
   src: url(GlacialIndifference-Bold.otf);
@@ -17,6 +21,13 @@ body {
   margin: 0;
 }
 
+h1 {
+  font-family: GlacialIndifference;
+}
+
+p {
+  font-family: "Raleway", sans-serif;
+}
 /** navigation bar **/
 /**               **/
 /**              **/
@@ -147,6 +158,7 @@ section {
   margin-left: -150px;
 }
 .right h1 {
+  font-family: GlacialIndifference;
   font-size: 40px;
   font-weight: lighter;
 }
@@ -270,6 +282,7 @@ section {
 
 /* garden location h1 heading */
 .garden-heading {
+  font-family: GlacialIndifference;
   background: #f5f5f5;
   text-align: center;
   padding-top: 20px;
@@ -277,6 +290,7 @@ section {
 
 /* sponser garden h1 heading */
 .garden-heading2 {
+  font-family: GlacialIndifference;
   color: #fff;
   background: #3e4d41;
   text-align: center;
@@ -393,7 +407,7 @@ input[type="submit"]:hover {
 /* resources info paragraph text */
 .r-info p {
   font-size: 18px;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Raleway", sans-serif;
   line-height: 1.4em;
   padding: 0px;
   padding-bottom: 20px;
@@ -539,7 +553,7 @@ footer h4 {
 
 footer p {
   font-size: 16px;
-  /*font-family: Arial, sans-serif;*/
+  font-family: "Raleway", sans-serif;
 }
 
 footer ul {
