--- a/style/main.css
+++ b/style/main.css
@@ -5,6 +5,14 @@
   font-family: "Montserrat";
 }
 
+body {
+  position: relative;
+  height: 100%;
+  margin: 0;
+}
+
+/** Main font styling **/
+
 /* Raleway Font - Regular 400 */
 @import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
 
@@ -15,19 +23,15 @@
   font-weight: bold;
 }
 
-body {
-  position: relative;
-  height: 100%;
-  margin: 0;
-}
-
 h1 {
   font-family: GlacialIndifference;
+  font-size: 32px;
 }
 
 p {
   font-family: "Raleway", sans-serif;
 }
+
 /** navigation bar **/
 /**               **/
 /**              **/
@@ -294,7 +298,6 @@ section {
   color: #fff;
   background: #3e4d41;
   text-align: center;
-  padding-top: 20px;
 }
 
 /* community garden locations table styling */
@@ -368,6 +371,15 @@ input[type="submit"]:hover {
   justify-content: center;
   padding: 5% 20%;
   color: #fff;
+}
+
+.article-section {
+  font-size: 14px;
+  background: #f5f5f5;
+  align-items: center;
+  justify-content: center;
+  padding: 5% 20%;
+  color: black;
 }
 
 /* info link button styling */
@@ -467,6 +479,8 @@ hr {
 }
 img {
   vertical-align: middle;
+  width: 100%;
+  height: 100%;
 }
 
 /* Slideshow container */
