--- a/style/main.css
+++ b/style/main.css
@@ -47,7 +47,7 @@ a {
 nav {
   width: 100%;
   margin: 0 auto;
-  background: #fff;
+  background: #fafafa;
 }
 nav h1 {
   display: inline-block;
@@ -138,7 +138,7 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #f5f5f5;
+  background-color: #f9f9f1;
 }
 .container {
   width: 90%;
@@ -158,15 +158,15 @@ section {
 }
 /* right side - div container & text styling */
 .right {
-  width: 50%;
+  width: 55%;
   min-height: 500px;
-  background-color: #3e4d41;
+  background-color: #205237;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 30px;
   border-radius: 8px;
-  color: white;
+  color: #fafafa;
   margin-left: -150px;
 }
 .right h1 {
@@ -189,12 +189,12 @@ section {
 }
 
 .mission-section {
-  font-size: 16px;
-  background: #3e4d41;
+  font-size: 18px;
+  background: #205237;
   align-items: center;
   justify-content: center;
   padding: 5%;
-  color: #fff;
+  color: #fafafa;
 }
 /* alignment for 4 divs in a square */
 .row1 {
@@ -210,10 +210,10 @@ section {
   margin: 0px;
 }
 
-/* goal section - gray background */
+/* goal section - beige background */
 .goal-section {
-  font-size: 16px;
-  background: #f5f5f5;
+  font-size: 18px;
+  background: #f9f9f1;
   align-items: center;
   justify-content: center;
   padding: 5%;
@@ -227,17 +227,16 @@ section {
 /* top section - how can i get involved? */
 .get-involved-info {
   font-size: 16px;
-  background: #3e4d41;
-  align-items: center;
-  justify-content: center;
-  padding: 5%;
-  color: #fff;
+  background: #205237;
+  text-align: center;
+  padding: 1% 10%;
+  color: #fafafa;
 }
 
 /* community garden div */
 .garden-section {
   font-size: 16px;
-  background: #f5f5f5;
+  background: #f9f9f1;
   align-items: center;
   justify-content: center;
   padding: 2% 10%;
@@ -246,7 +245,7 @@ section {
 /* 3 circles for sponser garden  */
 .circle-section {
   padding: 48px 0;
-  background: #3e4d41;
+  background: #205237;
 }
 
 .circle-container {
@@ -258,7 +257,7 @@ section {
 /* circles paragraph text */
 .circles p {
   font-size: 18px;
-  color: white;
+  color: #fafafa;
   font-weight: 500;
   line-height: 25px;
   padding: 1em;
@@ -280,7 +279,7 @@ section {
 .circled {
   display: block;
   text-decoration: none;
-  background-color: white;
+  background-color: #f9f9f1;
   width: 120px;
   margin: 0 auto 2em;
   padding: 0;
@@ -296,17 +295,17 @@ section {
 /* garden location h1 heading */
 .garden-heading {
   font-family: GlacialIndifference;
-  background: #f5f5f5;
+  background: #f9f9f1;
   text-align: center;
-  padding-top: 20px;
+  padding-top: 10px;
 }
 
 /* sponser garden h1 heading */
 .garden-heading2 {
   padding-top: 20px;
   font-family: GlacialIndifference;
-  color: #fff;
-  background: #3e4d41;
+  color: #fafafa;
+  background: #205237;
   text-align: center;
 }
 
@@ -319,7 +318,7 @@ section {
 
 #community-gardens td,
 #community-gardens th {
-  border: 1px solid #ddd;
+  border: 4px solid #ddd;
   padding: 8px;
   font-family: "Raleway", sans-serif;
 }
@@ -334,7 +333,7 @@ section {
 
 #community-gardens th {
   text-align: left;
-  background-color: #3e4d41;
+  background-color: #205237;
   color: white;
 }
 
@@ -368,12 +367,12 @@ input[type="submit"]:hover {
 }
 
 label {
-	font-family: "Raleway", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 .contact-container {
   border-radius: 5px;
-  background-color: #f2f2f2;
+  background-color: #f9f9f1;
   padding: 20px;
 }
 
@@ -383,20 +382,39 @@ label {
 
 .green-section {
   font-size: 14px;
-  background: #3e4d41;
+  background: #205237;
   align-items: center;
   justify-content: center;
   padding: 5% 20%;
-  color: #fff;
+  color: #fafafa;
 }
 
 .article-section {
   font-size: 14px;
-  background: #f5f5f5;
+  background: #f9f9f1;
   align-items: center;
   justify-content: center;
   padding: 5% 20%;
   color: black;
+}
+
+/* article cards styling */
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+  grid-gap: 20px;
+}
+
+.card {
+  border: 1px solid black;
+  display: grid;
+  grid-template-rows: max-content 200px 1fr;
+}
+
+.card img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 /* info link button styling */
@@ -412,8 +430,8 @@ label {
 }
 .resource:hover,
 .resource:active {
-  background-color: green;
-  color: white;
+  background-color: #f7941e;
+  color: black;
 }
 
 .r-heading {
@@ -456,11 +474,9 @@ hr {
 /**                  **/
 /**                 **/
 
-.gray-section {
-  font-size: 14px;
-  background: #f5f5f5;
-  align-items: center;
-  justify-content: center;
+.beige-section {
+  font-size: 18px;
+  background-color: #f9f9f1;
   padding: 5% 5% 5% 5%;
   color: black;
 }
@@ -473,6 +489,7 @@ hr {
   grid-gap: 5% 10%;
   text-align: left;
 }
+
 /* image gallery */
 
 .img-grid {
@@ -502,7 +519,7 @@ img {
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 800px;
   position: relative;
   margin: auto;
 }
@@ -537,7 +554,7 @@ img {
 
 /* Number text (1/3 etc) */
 .number-text {
-  color: #f2f2f2;
+  color: #fafafa;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
@@ -573,7 +590,7 @@ footer {
   padding-top: 20px;
   text-align: center;
   background-color: white;
-  border-top: 2px solid #3e4d41;
+  border-top: 2px solid #205237;
 }
 
 footer h4 {
@@ -595,7 +612,7 @@ footer ul {
 }
 
 footer a {
-	font-size: 14px;
+  font-size: 14px;
 }
 
 .footer-grid {
@@ -606,7 +623,7 @@ footer a {
   padding: 10px; /*space between the border of the grid and the page*/
   grid-gap: 10px; /*space between different grid components*/
   font-family: "Arial", "Verdana"; /*font, obviously*/
-  color: #3e4d41; /*text color*/
+  color: #205237; /*text color*/
 }
 
 .footer-grid-item {
@@ -632,7 +649,7 @@ footer a {
 }
 
 .item4 {
-  border-top: 1px solid #3e4d41;
+  border-top: 1px solid #205237;
   grid-column: span 4;
   grid-row: span 2;
   text-align: center;
@@ -757,7 +774,7 @@ footer a {
   100% {
     width: 100%;
     height: 100%;
-    background: #3e4d41;
+    background: #205237;
   }
 }
 /* firefox */
@@ -773,7 +790,7 @@ footer a {
   100% {
     width: 100%;
     height: 100%;
-    background: #3e4d41;
+    background: #205237;
   }
 }
 /* opera */
@@ -789,7 +806,7 @@ footer a {
   100% {
     width: 100%;
     height: 100%;
-    background: #3e4d41;
+    background: #205237;
   }
 }
 /* internet explorer */
@@ -805,7 +822,7 @@ footer a {
   100% {
     width: 100%;
     height: 100%;
-    background: #3e4d41;
+    background: #205237;
   }
 }
 /* css3 */
@@ -821,7 +838,7 @@ footer a {
   100% {
     width: 100%;
     height: 100%;
-    background: #3e4d41;
+    background: #205237;
   }
 }
 
