--- a/style/main.css
+++ b/style/main.css
@@ -47,7 +47,6 @@ a {
 .logonav {
   height: 150px;
   width: 150px;
-  padding-left: 5%;
 }
 nav {
   width: 100%;
@@ -65,8 +64,7 @@ nav h1 {
 }
 /* nav link list styling */
 nav ul {
-  float: right;
-  padding-right: 10%;
+  text-align: center;
   list-style: none;
 }
 nav ul li {
@@ -202,6 +200,16 @@ section {
   padding: 5%;
   color: #fafafa;
 }
+.mission-section-image {
+  position: relative;
+}
+.mission-section-image video {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  object-fit: cover;
+  z-index: 0;
+}
 /* alignment for 4 divs in a square */
 .row1 {
   display: flex;
@@ -225,7 +233,16 @@ section {
   padding: 5%;
   color: black;
 }
-
+.goal-section-image {
+  position: relative;
+}
+.goal-section-image video {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  object-fit: cover;
+  z-index: 0;
+}
 /** GETINVOLVED.HTML PAGE **/
 /**                      **/
 /**                     **/
@@ -243,6 +260,7 @@ section {
 .garden-section {
   font-size: 16px;
   background: #f9f9f1;
+  text-align: center;
   align-items: center;
   justify-content: center;
   padding: 2% 10%;
@@ -373,6 +391,7 @@ input[type="submit"]:hover {
 }
 
 label {
+  float: left;
   font-family: "Raleway", sans-serif;
 }
 
@@ -391,16 +410,15 @@ label {
   background: #205237;
   align-items: center;
   justify-content: center;
-  padding: 5% 20%;
+  padding: 2% 20%;
   color: #fafafa;
 }
 
 .article-section {
   font-size: 14px;
   background: #f9f9f1;
-  align-items: center;
-  justify-content: center;
-  padding: 5% 20%;
+  text-align: center;
+  padding: 2% 20%;
   color: black;
 }
 
@@ -408,7 +426,7 @@ label {
 .cards {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
-  grid-gap: 20px;
+  grid-gap: 30px;
 }
 
 .card {
@@ -739,6 +757,14 @@ footer a {
     width: 90%;
     margin: 0;
     margin-top: -100px;
+  }
+  .logonav {
+    height: 75px;
+    width: 75px;
+  }
+  nav ul li a {
+    width: 100%;
+    display: inline-block;
   }
 }
 @media screen and (max-width: 600px) {
