--- a/style/main.css
+++ b/style/main.css
@@ -32,6 +32,10 @@ h2 {
   font-family: GlacialIndifference;
 }
 
+h3 {
+  font-family: GlacialIndifference;
+}
+
 p {
   font-family: "Raleway", sans-serif;
 }
