--- a/style/main.css
+++ b/style/main.css
@@ -49,7 +49,7 @@ a {
 /**              **/
 
 .logonav {
-  width: 100%;
+  width: 400px;
 }
 nav {
   width: 100%;
@@ -72,7 +72,7 @@ nav ul li a {
   text-decoration: none;
   color: black;
   margin: 0 10px;
-  font-size: 22px;
+  font-size: 20px;
 }
 nav ul li a,
 nav ul li a:after,
