--- a/style/main.css
+++ b/style/main.css
@@ -189,12 +189,15 @@ section {
 }
 
 .mission-section {
-  font-size: 18px;
   background: #205237;
   align-items: center;
   justify-content: center;
   padding: 5%;
   color: #fafafa;
+}
+
+.mission-section p {
+  font-size: 16px;
 }
 .mission-section-image {
   position: relative;
@@ -222,12 +225,15 @@ section {
 
 /* goal section - beige background */
 .goal-section {
-  font-size: 18px;
   background: #f9f9f1;
   align-items: center;
   justify-content: center;
   padding: 5%;
   color: black;
+}
+
+.goal-section p {
+  font-size: 16px;
 }
 .goal-section-image {
   position: relative;
@@ -250,6 +256,12 @@ section {
   text-align: center;
   padding: 1% 10%;
   color: #fafafa;
+}
+
+.get-involved-info li {
+  list-style-type: none;
+  font-size: 16px;
+  font-family: "Raleway", sans-serif;
 }
 
 /* community garden div */
@@ -373,17 +385,18 @@ textarea {
 }
 
 input[type="submit"] {
-  background-color: #4caf50;
+  background-color: #205237;
   color: white;
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   font-family: "Raleway", sans-serif;
+  font-size: 16px;
 }
 
 input[type="submit"]:hover {
-  background-color: #45a049;
+  background-color: #f7941e;
 }
 
 label {
