--- a/style/main.css
+++ b/style/main.css
@@ -70,7 +70,7 @@ nav ul li a {
   display: block;
   padding: 15px;
   text-decoration: none;
-  color: black;
+  color: #205237;
   margin: 0 10px;
   font-size: 20px;
 }
