--- a/style/main.css
+++ b/style/main.css
@@ -439,7 +439,8 @@ label {
 }
 
 .card {
-  border: 1px solid black;
+  border: 2px solid #205237;
+  padding: 5px;
   display: grid;
   grid-template-rows: max-content 200px 1fr;
 }
