--- a/style/main.css
+++ b/style/main.css
@@ -390,6 +390,8 @@ form {
   margin-left: auto;
   margin-right: auto;
   text-align: left;
+}
+label {
   font-family: "Raleway", sans-serif;
 }
 input[type="text"],
