modal image gallery

--- a/style/main.css
+++ b/style/main.css
@@ -553,8 +553,9 @@ hr {
 
 .beige-section {
   background-color: #f9f9f1;
-  padding: 5% 5% 5% 5%;
+  padding: 2% 5% 5% 5%;
   color: black;
+  text-align: center;
 }
 
 .featuredImg {
@@ -566,24 +567,7 @@ hr {
   text-align: left;
 }
 
-/* image gallery */
-
-.img-grid {
-  display: grid;
-  grid-template-columns: 25% 25% 25% 25%; /*number of columns*/
-  grid-template-rows: repeat(3, 1fr); /*number of rows*/
-  padding: 10px; /*space between the border of the grid and the page*/
-  grid-gap: 10px; /*space between different grid components*/
-}
-
-.gallery {
-  /*affects images in image gallery*/
-  padding: 10px;
-  cursor: pointer;
-}
-
 /* gallery slideshow */
-
 .mySlides {
   display: none;
 }
@@ -610,7 +594,7 @@ img {
   margin-top: -22px;
   color: white;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 30px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
@@ -652,6 +636,94 @@ img {
 .active,
 .dot:hover {
   background-color: #717171;
+}
+
+/* image gallery */
+.img-grid {
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%; /*number of columns*/
+  grid-template-rows: repeat(3, 1fr); /*number of rows*/
+  padding: 10px; /*space between the border of the grid and the page*/
+  grid-gap: 10px; /*space between different grid components*/
+}
+.gallery {
+  /*affects images in image gallery*/
+  padding: 10px;
+  cursor: pointer;
+}
+
+/* modal image gallery */
+
+.myImg {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.myImg:hover {
+  opacity: 0.7;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
+}
+
+/* Modal Content (image) */
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 1000px;
+}
+
+/* Caption of Modal Image */
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 150px;
+}
+
+/* Add Animation */
+.modal-content,
+#caption {
+  -webkit-animation-name: zoom;
+  -webkit-animation-duration: 0.6s;
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+/* The Close Button */
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 /** FOOTER **/
@@ -841,6 +913,10 @@ footer a {
     color: black;
     font-family: "Raleway", sans-serif;
   }
+  /* 100% Image Width on Smaller Screens */
+  .modal-content {
+    width: 100%;
+  }
 }
 @media screen and (max-width: 600px) {
   ul.topnav li.right,
@@ -876,6 +952,25 @@ footer a {
 /**   KEYFRAMES   **/
 /**               **/
 /**               **/
+
+/* modal image gallery keyframe */
+@-webkit-keyframes zoom {
+  from {
+    -webkit-transform: scale(0);
+  }
+  to {
+    -webkit-transform: scale(1);
+  }
+}
+
+@keyframes zoom {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
 
 /* Keyframes for hover [stroke/fill] animation on nav bar links */
 /* chrome & safari */
