--- a/style/main.css
+++ b/style/main.css
@@ -365,12 +365,13 @@ section {
 
 #community-gardens td,
 #community-gardens th {
-  border: 4px solid #ddd;
+  border: 2px solid #ddd;
   padding: 8px;
+  text-align: left;
   font-family: "Raleway", sans-serif;
 }
 
-#community-gardens tr:nth-child(even) {
+#community-gardens tr {
   background-color: #fff;
 }
 
@@ -380,6 +381,7 @@ section {
 
 #community-gardens th {
   text-align: left;
+  font-size: 18px;
   background-color: #205237;
   color: white;
 }
@@ -409,8 +411,8 @@ textarea {
 }
 
 input[type="submit"] {
-  background-color: #205237;
-  color: white;
+  background-color: #fafafa;
+  color: black;
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
@@ -739,8 +741,6 @@ img {
 
 footer {
   position: relative;
-  left: 0%;
-  bottom: 0%;
   width: 100%;
   padding-top: 20px;
   text-align: center;
@@ -808,12 +808,7 @@ footer a {
   grid-column: span 4;
   grid-row: span 2;
   text-align: center;
-  padding-top: 30px;
-}
-
-/*contact styling*/
-.container {
-  padding: 10px;
+  padding-top: 20px;
 }
 
 /* social icons styling*/
